# comfyui-workflow-name

./: .gitignore  COMFYUI_MANAGER_ENTRY.json  README.md  __init__.py  pyproject.toml
web/: workflow_name.js
