[project]
name = "workflow-name"
description = "A ComfyUI custom node that outputs the current workflow filename as a string."
version = "1.0.2"
license = {file = "README.md"} 
requires-python = ">=3.0" # not python2
dependencies = [
    "comfyui-frontend-package>=1.39.19"      # The developer used it at the time of release.
]
classifiers = [
     "Operating System :: OS Independent" # works on all operating systems
]


[project.urls]
Repository = "https://github.com/MichinariNukazawa/comfyui-workflow-name"
"Bug Tracker" = "https://github.com/MichinariNukazawa/comfyui-workflow-name/issues"

[tool.comfy]
PublisherId = "michinari-nukazawa"
DisplayName = "workflow-name"
Icon = ""
includes = [] 
requires-comfyui = ">=0.15.1"  # The developer used it at the time of release.
